<resources>
    <string name="app_name">Client</string>
    <string name="action_settings">Settings</string>
    <string name="RegisterButton">Zarejestruj się</string>
    <string name="RegisterText">Nie masz jeszcze konta?</string>
    <string name="PasswordHint">pass</string>
    <string name="UsernameHint">Nazwa</string>
    <string name="LoginButton">Logowanie</string>
    <string name="RepeatPassword">Powtórz hasło</string>
    <string name="MailHint">Adrese email</string>
    <string name="RegisterInfo">Rejestracja</string>
    <string name="Confirm">Potwierdź</string>
    <string name="EmailEdit">Podaj adres email</string>
    <string name="PasswordNoMatch">Hasła nie są jednakowe!</string>
    <string name="Logout">Wyloguj</string>
    <string name="Add">Dodaj</string>
    <string name="Reload">Odśwież</string>
    <string name="SampleText">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin nibh augue, suscipit a, scelerisque sed, lacinia in, mi. Cras vel lorem. Etiam pellentesque aliquet tellus. Phasellus pharetra nulla ac diam. Quisque semper justo at risus. Donec venenatis, turpis vel hendrerit interdum, dui ligula ultricies purus, sed posuere libero dui id orci. Nam congue, pede vitae dapibus aliquet, elit magna vulputate arcu, vel tempus metus leo non est. Etiam sit amet lectus quis est congue mollis. Phasellus congue lacus eget neque. Phasellus ornare, ante vitae consectetuer consequat, purus sapien ultricies dolor, et mollis pede metus eget nisi. Praesent sodales velit quis augue. Cras suscipit, urna at aliquam rhoncus, urna quam viverra nisi, in interdum massa nibh nec erat.</string>
    <string name="title_activity_record">RecordActivity</string>
</resources>
